<resources>

    <string name="app_name">EliteInventory</string>

    <!-- Main item -->
    <string name="main_item_01">"结帐"</string>
    <string name="main_item_02">"订单"</string>
    <string name="main_item_03">"退货"</string>
    <string name="main_item_04">"会员"</string>
    <string name="main_item_05">"交班"</string>
    <string name="main_item_06">"商品"</string>
    <string name="main_item_07">"库存"</string>
    <string name="main_item_08">"优惠"</string>
    <string name="main_item_09">"其他"</string>

    <!-- goods_ -->
    <string name="goods_curr_rmb">"￥"</string>
    <string name="goods_Price_x">"x"</string>
    <string name="goods_price_0">"0.00"</string>
    <string name="goods_name">"商品名称"</string>
    <string name="goods_name_2">"货品名称/条形码"</string>
    <string name="goods_sum">"金额"</string>
    <string name="goods_amount">"总金额"</string>
    <string name="goods_number">"数量"</string>
    <string name="goods_number_2">"商品数量"</string>
    <string name="goods_number_3">"共%1$d件"</string>
    <string name="goods_price">"单价"</string>
    <string name="goods_price_2">"商品单价"</string>
    <string name="goods_subtotal">"小计"</string>
    <string name="goods_total">"总计："</string>
    <string name="goods_total_2">"商品总价"</string>
    <string name="goods_delete">"删除商品"</string>
    <string name="goods_payment">"收款："</string>
    <string name="goods_change">"找零："</string>
    <string name="goods_unit_price">"单价"</string>
    <string name="goods_stock_show">"库存  "</string>
    <string name="goods_pay">"支付"</string>
    <string name="goods_confirm">"确认账单"</string>
    <string name="goods_all_clear">"清空所有"</string>
    <string name="goods_clear_confirm">"确定清空购物车中的%1$d件商品么？"</string>
    <string name="goods_add_list">"加入清单"</string>
    <string name="goods_drugs_query">"商品查询"</string>
    <string name="goods_order_query">"订单查询"</string>
    <string name="goods_print_ticket">"补打小票"</string>
    <string name="goods_print_paper">"打印机缺纸"</string>
    <string name="goods_print_error">"打印机故障"</string>
    <string name="goods_print_connect_no">"打印机未连接"</string>

    <!-- fragment_1 -->
    <string name="fragment_1_save">"存单"</string>
    <string name="fragment_1_take">"取单"</string>
    <string name="fragment_1_cash_box">"开钱箱"</string>
    <string name="fragment_1_right_1">"整单折扣"</string>
    <string name="fragment_1_right_10">"整单减免"</string>
    <string name="fragment_1_right_11">"折扣"</string>
    <string name="fragment_1_right_12">"减免"</string>
    <string name="fragment_1_right_13">"抹零分"</string>
    <string name="fragment_1_right_14">"抹零角"</string>
    <string name="fragment_1_right_2">"支付方式"</string>
    <string name="fragment_1_right_21">"现金"</string>
    <string name="fragment_1_right_22">"微信"</string>
    <string name="fragment_1_right_23">"支付宝"</string>
    <string name="fragment_1_right_24">"会员卡"</string>
    <string name="fragment_1_right_3">"实际应收"</string>

    <!-- other -->
    <string name="cancel">"取消"</string>
    <string name="confirm">"确定"</string>
    <string name="day">d</string>
    <string name="hour">h</string>
    <string name="minute">m</string>
    <string name="second">s</string>
    <string name="text_input_num_0">"数量不能为0"</string>
    <string name="text_input_num_null">"数量不能为空"</string>
    <string name="text_input_price_0">"价格不能为0"</string>
    <string name="text_input_price_null">"价格不能为空"</string>
    <string name="text_input_price_error">"价格格式错误"</string>
    <string name="text_input_code">"请输入商品条形码"</string>
    <string name="text_input_code_hint">"扫描或输入商品条形码"</string>
    <string name="text_input_code_error">"无效的商品条形码"</string>
    <string name="text_input_keyword_hint">"商品码、名称、关键字等搜索"</string>
    <string name="text_input_keyword_null">"未匹配到与关键字相关的商品"</string>

</resources>
