<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/back_color_lc_10"
    android:paddingLeft="@dimen/main_window_margin"
    android:paddingRight="@dimen/main_window_margin"
    android:paddingBottom="@dimen/main_window_margin"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:padding="@dimen/margin_padding_10"
        android:background="@drawable/shape_bg_border_debar_8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/margin_padding_15"
            android:paddingBottom="@dimen/margin_padding_15"
            android:background="@drawable/shape_bg_border_state_8"
            android:orientation="horizontal">

            <TextView
                style="@style/goods_head_tv"
                android:layout_weight="4"
                android:paddingLeft="@dimen/margin_padding_10"
                android:text="@string/goods_name"/>

            <TextView
                style="@style/goods_head_tv"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/goods_number"/>

            <TextView
                style="@style/goods_head_tv"
                android:paddingLeft="@dimen/margin_padding_20"
                android:text="@string/goods_unit_price"/>

            <TextView
                style="@style/goods_head_tv"
                android:paddingLeft="@dimen/margin_padding_20"
                android:text="@string/goods_subtotal"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:layout_marginTop="@dimen/margin_padding_2"
            android:paddingLeft="@dimen/margin_padding_1"
            android:paddingRight="@dimen/margin_padding_1"
            android:paddingTop="@dimen/margin_padding_8"
            android:paddingBottom="@dimen/margin_padding_8"
            android:background="@drawable/shape_bg_border_debar_8"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/fragment_1_rv_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                android:scrollbars="none"/>
        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/margin_padding_3"
            android:background="@drawable/shape_bg_border_debar_8">

            <TextView
                android:id="@+id/fragment_1_tv_1"
                style="@style/fragment_1_bottom_tv"
                android:text="@string/fragment_1_save"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/fragment_1_tv_2"
                style="@style/fragment_1_bottom_tv"
                android:text="@string/fragment_1_take"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_1"/>

            <TextView
                android:id="@+id/fragment_1_tv_3"
                style="@style/fragment_1_bottom_tv"
                android:text="@string/fragment_1_cash_box"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_2"/>

            <TextView
                android:id="@+id/fragment_1_tv_4"
                style="@style/fragment_1_bottom_tv"
                android:text="@string/goods_all_clear"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_3"/>

            <TextView
                android:id="@+id/fragment_1_tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/goods_total_tv_size"
                android:textColor="@color/text_color_redss"
                android:layout_marginRight="@dimen/margin_padding_50"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="@dimen/margin_padding_10"
        android:layout_marginLeft="@dimen/margin_padding_5"
        android:background="@drawable/shape_bg_border_debar_8">

        <EditText
            android:id="@+id/fragment_1_et_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_15"
            android:gravity="center"
            android:singleLine="true"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:hint="@string/text_input_code_hint"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_color_white"
            android:textColorHint="@color/text_color_input"
            android:background="@drawable/shape_bg_border_state_8"/>

        <TextView
            android:id="@+id/fragment_1_tv_right_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:text="@string/fragment_1_right_1"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_color_greys"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_et_code" />

        <TextView
            android:id="@+id/fragment_1_tv_right_2"
            style="@style/fragment_1_right_tv"
            android:layout_marginLeft="0dp"
            android:text="@string/fragment_1_right_11"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_1" />

        <TextView
            android:id="@+id/fragment_1_tv_right_3"
            style="@style/fragment_1_right_tv"
            android:text="@string/fragment_1_right_12"
            app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_right_2"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_1" />

        <TextView
            android:id="@+id/fragment_1_tv_right_4"
            style="@style/fragment_1_right_tv"
            android:text="@string/fragment_1_right_13"
            app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_right_3"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_1" />

        <TextView
            android:id="@+id/fragment_1_tv_right_5"
            style="@style/fragment_1_right_tv"
            android:text="@string/fragment_1_right_14"
            app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_right_4"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_1" />

        <TextView
            android:id="@+id/fragment_1_tv_right_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_15"
            android:text="@string/fragment_1_right_2"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_color_greys"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_2" />

        <TextView
            android:id="@+id/fragment_1_tv_right_7"
            style="@style/fragment_1_right_tv"
            android:layout_marginLeft="0dp"
            android:text="@string/fragment_1_right_21"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_6" />

        <TextView
            android:id="@+id/fragment_1_tv_right_8"
            style="@style/fragment_1_right_tv"
            android:text="@string/fragment_1_right_22"
            app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_right_7"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_6" />

        <TextView
            android:id="@+id/fragment_1_tv_right_9"
            style="@style/fragment_1_right_tv"
            android:text="@string/fragment_1_right_23"
            app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_right_8"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_6" />

        <TextView
            android:id="@+id/fragment_1_tv_right_10"
            style="@style/fragment_1_right_tv"
            android:text="@string/fragment_1_right_24"
            app:layout_constraintLeft_toRightOf="@+id/fragment_1_tv_right_9"
            app:layout_constraintTop_toBottomOf="@id/fragment_1_tv_right_6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_15"
            android:text="@string/fragment_1_right_3"
            android:textSize="@dimen/text_size_18"
            android:textColor="@color/text_color_greys"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/fragment_1_tv_total_pay" />

        <TextView
            android:id="@+id/fragment_1_tv_total_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_5"
            android:textSize="@dimen/text_size_30"
            android:textColor="@color/text_color_redss"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fragment_1_tv_total_detail" />

        <TextView
            android:id="@+id/fragment_1_tv_total_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_padding_15"
            android:gravity="center"
            android:textSize="@dimen/text_size_12"
            android:textColor="@color/text_color_greys"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fragment_1_tv_confirm" />

        <TextView
            android:id="@+id/fragment_1_tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_padding_15"
            android:background="@drawable/shape_bg_border_state_8"
            android:gravity="center"
            android:text="@string/goods_confirm"
            android:textSize="@dimen/text_size_20"
            android:textColor="@color/text_color_white"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>