<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_bg"
    android:padding="0dp">

    <ImageButton
        android:id="@+id/dialog_ib_delete"
        android:layout_width="@dimen/margin_padding_45"
        android:layout_height="@dimen/margin_padding_45"
        android:src="@mipmap/ic_delete"
        android:scaleType="center"
        android:background="@color/back_color_lc_10"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/dialog_tv_bill_name"
        style="@style/bill_edit_tv"
        android:text="@string/goods_name"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/dialog_tv_bill_num"
        style="@style/bill_edit_tv"
        android:text="@string/goods_number_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_tv_bill_name"/>

    <EditText
        android:id="@+id/dialog_et_bill_num"
        style="@style/bill_edit_et"
        app:layout_constraintTop_toBottomOf="@+id/dialog_tv_bill_name"
        app:layout_constraintLeft_toRightOf="@+id/dialog_tv_bill_num"/>

    <ImageView
        style="@style/set_line_horizontal_bg"
        android:layout_width="325dp"
        android:layout_marginTop="@dimen/margin_padding_1"
        android:layout_marginLeft="@dimen/margin_padding_15"
        app:layout_constraintTop_toBottomOf="@+id/dialog_et_bill_num"
        app:layout_constraintLeft_toRightOf="@+id/dialog_tv_bill_num"/>

    <TextView
        android:id="@+id/dialog_tv_bill_price"
        style="@style/bill_edit_tv"
        android:text="@string/goods_price_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_tv_bill_num"/>

    <EditText
        android:id="@+id/dialog_et_bill_price"
        style="@style/bill_edit_et"
        android:digits=".0123456789"
        app:layout_constraintTop_toBottomOf="@+id/dialog_et_bill_num"
        app:layout_constraintLeft_toRightOf="@+id/dialog_tv_bill_price"/>

    <ImageView
        style="@style/set_line_horizontal_bg"
        android:layout_width="325dp"
        android:layout_marginTop="@dimen/margin_padding_1"
        android:layout_marginLeft="@dimen/margin_padding_15"
        app:layout_constraintTop_toBottomOf="@+id/dialog_et_bill_price"
        app:layout_constraintLeft_toRightOf="@+id/dialog_tv_bill_price"/>

    <TextView
        android:id="@+id/dialog_tv_bill_total"
        style="@style/bill_edit_tv"
        android:text="@string/goods_total_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_tv_bill_price"/>

    <TextView
        android:id="@+id/dialog_tv_bill_total_2"
        style="@style/bill_edit_tv"
        app:layout_constraintTop_toBottomOf="@+id/dialog_tv_bill_price"
        app:layout_constraintLeft_toRightOf="@+id/dialog_tv_bill_total"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/margin_padding_10"
        android:layout_marginTop="@dimen/margin_padding_20"
        app:layout_constraintTop_toBottomOf="@+id/dialog_tv_bill_total">

        <Button
            android:id="@+id/dialog_button_cancel"
            style="@style/dialog_tow_bt"
            android:background="@drawable/shape_bg_border_debar_8"
            android:text="@string/goods_delete"
            android:textColor="@color/text_color_btn_b" />

        <Button
            android:id="@+id/dialog_button_confirm"
            style="@style/dialog_tow_bt"
            android:text="@string/confirm" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>